# sc-observability

./: .gitignore  AGENTS.md  CLAUDE.md  CONSUMING.md  Cargo.toml  PUBLISHING.md  README.md
.claude/: settings.json
.claude/agents/: arch-qa.md  flaky-test-qa.md  publisher.md  quality-mgr.md  req-qa.md
.claude/skills/atm-doctor/: SKILL.md
.claude/skills/codex-orchestration/: SKILL.md  dev-template.xml.j2  qa-template.xml.j2  review-template.xml.j2
.claude/skills/phase-orchestration/: SKILL.md
.claude/skills/quality-management-gh/: SKILL.md  findings-report.md.j2  quality-report.md.j2
.claude/skills/rust-best-practices/patterns/: enforcement-strategy.md
.claude/skills/sprint-report/: SKILL.md  report-detailed.md.j2  report.md.j2
.claude/skills/team-lead/: SKILL.md  backup-and-restore-team.md
.github/workflows/: ci.yml  release-preflight.yml  release.yml
crates/sc-observability/: Cargo.toml
crates/sc-observability-otlp/: Cargo.toml
crates/sc-observability-otlp/examples/: atm-adapter-example.rs
crates/sc-observability-otlp/src/: assembly.rs  config.rs  constants.rs  error_codes.rs  lib.rs  projectors.rs
crates/sc-observability-otlp/tests/: full_stack_integration.rs
crates/sc-observability-types/: Cargo.toml
crates/sc-observability-types/src/: constants.rs  diagnostic.rs  error_codes.rs  errors.rs  events.rs  health.rs  level.rs  lib.rs  metric.rs  primitives.rs  process.rs  projection.rs  query.rs  span.rs  tracing.rs  validation.rs
crates/sc-observability/src/: builder.rs  constants.rs  error_codes.rs  follow.rs  health.rs  jsonl_reader.rs  lib.rs  query.rs
crates/sc-observability/tests/: logging_only.rs
crates/sc-observe/: Cargo.toml
crates/sc-observe/src/: constants.rs  error_codes.rs  lib.rs
crates/sc-observe/tests/: full_stack_otlp_integration.rs  routing_integration.rs
docs/: api-design.md  architecture.md  atm-adapter-architecture.md  atm-adapter-example.md  atm-adapter-mapping-spec.md  atm-adapter-requirements.md  atm-quickstart.md  cross-platform-guidelines.md  extraction-inventory.md  git-workflows.md  implementation-plan.md  migration-guide.md  performance-pass.md  phase-1-sprint-assignment.md  phase-2-plan.md  pre-publish-recovery-plan.md  project-plan.md  public-api-checklist.md  publishing.md  release-readiness-checklist.md  release-tag-protection.md  requirements.md  sprint-1-execution-packet.md  sprint-plan-prod-readiness.md  sprint-plan.md  test-strategy.md
examples/atm-adapter-example/: Cargo.toml  README.md
examples/atm-adapter-example/src/: constants.rs  main.rs
examples/custom-sink-example/: Cargo.toml
examples/custom-sink-example/src/: main.rs
pm/: arch-obs.md
release/: RELEASE-NOTES-TEMPLATE.md  publish-artifacts.toml  release-inventory.json
scripts/: release_artifacts.py
scripts/ci/: validate_dependency_bans.sh  validate_docs_consistency.sh  validate_publish_order.sh  validate_repo_boundaries.sh  validate_version_literals.py  validate_version_literals.sh
