[workspace]
members = [
  "crates/sc-observability-types",
  "crates/sc-observability",
  "crates/sc-observe",
  "crates/sc-observability-otlp",
]
exclude = ["examples/atm-adapter-example"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/randlee/sc-observability"
homepage = "https://github.com/randlee/sc-observability"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
