[package]
name = "sc-observability-otlp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Standalone OTLP export adapter for sc-observability."

[dependencies]
serde_json.workspace = true
thiserror.workspace = true
sc-observability-types = { path = "../sc-observability-types", version = "0.46.2" }

[dev-dependencies]
sc-observability = { path = "../sc-observability", version = "0.46.2" }
sc-observe = { path = "../sc-observe", version = "0.46.2" }
