[package]
name = "sc-observability-otlp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Standalone OTLP export adapter for sc-observability."

[dependencies]
serde_json.workspace = true
thiserror.workspace = true
sc-observability.workspace = true
sc-observability-types.workspace = true

[dev-dependencies]
sc-observe.workspace = true

[lints]
workspace = true
