[package]
name = "sc-observability-types"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Standalone shared types for observability records and config."

[dependencies]
serde.workspace = true

