[package]
name = "sc-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Standalone facade crate for observability operations."

[dependencies]
sc-observability-types = { path = "../sc-observability-types", version = "0.46.2" }
