[package]
name = "sc-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Standalone facade crate for observability operations."

[dependencies]
serde_json.workspace = true
sc-observability-types = { path = "../sc-observability-types", version = "1.0.0" }
