[package]
name = "sc-observe"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Observation routing runtime layered on sc-observability."

[dependencies]
sc-observability-types = { path = "../sc-observability-types", version = "0.46.2" }
sc-observability = { path = "../sc-observability", version = "0.46.2" }
