[package]
name = "sc-observe"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Observation routing runtime layered on sc-observability."

[dependencies]
sc-observability-types.workspace = true
sc-observability.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
