[package]
name = "atm-adapter-example"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
sc-observability-types = { path = "../../crates/sc-observability-types" }
sc-observability = { path = "../../crates/sc-observability" }
sc-observe = { path = "../../crates/sc-observe" }
sc-observability-otlp = { path = "../../crates/sc-observability-otlp" }
